--- a/kubernetes/main/apps/monitoring/kube-prometheus-stack/app/scrapeconfigs/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/kube-prometheus-stack/app/scrapeconfigs/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./zfs-exporter.yaml
   - ./node-exporter.yaml
   - ./smartctl-exporter.yaml
-  - ./minio-exporter.yaml
+  # - ./minio-exporter.yaml
