--- a/kubernetes/main/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/main/apps/default/home-assistant/ks.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   targetNamespace: default
   dependsOn:
+    - name: multus-config
     - name: cloudnative-pg-cluster
     - name: longhorn
     - name: external-secrets-stores
@@ -20,23 +21,3 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
-# ---
-# # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: home-assistant-code
-#   namespace: flux-system
-#   labels:
-#     substitution.flux.home.arpa/enabled: "true"
-# spec:
-#   targetNamespace: default
-#   path: ./kubernetes/main/apps/default/home-assistant/code
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
-#   wait: false
-#   interval: 30m
-#   retryInterval: 1m
-#   timeout: 5m
