--- a/kubernetes/main/apps/networking/multus/app/rbac.yaml
+++ b/kubernetes/main/apps/networking/multus/app/rbac.yaml
@@ -6,9 +6,9 @@ metadata:
 rules:
   - apiGroups: ["k8s.cni.cncf.io"]
     resources:
-      - '*'
+      - "*"
     verbs:
-      - '*'
+      - "*"
   - apiGroups:
       - ""
     resources:
@@ -40,4 +40,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: multus
-    namespace: networking
+    namespace: network
