--- a/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
+++ b/kubernetes/main/apps/networking/multus/config/net-attach-iot.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: k8s.cni.cncf.io/v1
+apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
   name: multus-iot
@@ -11,20 +11,21 @@ spec:
       "plugins": [
         {
           "type": "macvlan",
-          "master": "iot",
+          "master": "bond0.30",
           "mode": "bridge",
           "capabilities": {
             "ips": true
           },
           "ipam": {
-            "type": "static"
+            "type": "static",
+            "routes": [
+              { "dst": "192.168.10.0/24", "gw": "192.168.30.1" }
+            ]
           }
         },
         {
-          "type": "tuning",
-          "capabilities": {
-            "mac": true
-          }
+          "capabilities": { "mac": true },
+          "type": "tuning"
         }
       ]
     }
