--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -148,7 +148,7 @@ spec:
             type: alertmanager
             uid: alertmanager
             access: proxy
-            url: http://alertmanager-operated.observability.svc.cluster.local:9093
+            url: http://alertmanager-operated.monitoring.svc.cluster.local:9093
     dashboards:
       default:
         external-dns:
@@ -159,12 +159,6 @@ spec:
         smart:
           # renovate: depName="Dashboard for smartctl_exporter"
           gnetId: 20204
-          revision: 1
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        spegel:
-          # renovate: depName="Spegel"
-          gnetId: 18089
           revision: 1
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
@@ -183,12 +177,6 @@ spec:
           gnetId: 7845
           revision: 4
           datasource: Prometheus
-        minio:
-          # renovate: depName="MinIO Dashboard"
-          gnetId: 13502
-          revision: 26
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
         cert-manager:
           url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
           datasource: Prometheus
