--- a/.github/renovate/clusters.json5
+++ b/.github/renovate/clusters.json5
@@ -2,11 +2,8 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "packageRules": [
     {
-      "description": "Separate PRs for main cluster",
-      "matchFileNames": [
-        "**/kubernetes/main/**",
-        "**/ansible/main/**",
-      ],
+      "description": ["Separate PRs for main cluster"],
+      "matchFileNames": ["**/kubernetes/main/**"],
       "additionalBranchPrefix": "main-"
     }
   ]
