--- a/kubernetes/main/apps/networking/cloudflare-ddns/app/externalsecret.yaml
+++ b/kubernetes/main/apps/networking/cloudflare-ddns/app/externalsecret.yaml
@@ -9,31 +9,13 @@ spec:
     template:
       type: Opaque
       data:
-        CLOUDFLARE_EMAIL: "{{ .CLOUDFLARE_EMAIL }}"
-        CLOUDFLARE_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
-        CLOUDFLARE_RECORD_NAME: external.{{ .CLOUDFLARE_RECORD }}
+        ACCOUNT_TOKEN: "{{ .CLOUDFLARE_DDNS_TOKEN }}"
   data:
-    - secretKey: CLOUDFLARE_EMAIL
+    - secretKey: CLOUDFLARE_DDNS_TOKEN
       sourceRef:
         storeRef:
           name: bitwarden-fields
           kind: ClusterSecretStore
       remoteRef:
         key: 90e5e570-8a6a-42a3-87fd-4d93c591dc6d
-        property: email
-    - secretKey: CLOUDFLARE_API_KEY
-      sourceRef:
-        storeRef:
-          name: bitwarden-fields
-          kind: ClusterSecretStore
-      remoteRef:
-        key: 90e5e570-8a6a-42a3-87fd-4d93c591dc6d
-        property: apikey
-    - secretKey: CLOUDFLARE_RECORD
-      sourceRef:
-        storeRef:
-          name: bitwarden-fields
-          kind: ClusterSecretStore
-      remoteRef:
-        key: 90e5e570-8a6a-42a3-87fd-4d93c591dc6d
-        property: record_external
+        property: token_external
