--- a/.taskfiles/ExternalSecrets/Taskfile.yaml
+++ b/.taskfiles/ExternalSecrets/Taskfile.yaml
@@ -3,21 +3,19 @@ version: "3"
 
 tasks:
 
-  sync:
-    desc: Sync ExternalSecret resources
-    vars:
-      secret: '{{ .secret | default ""}}'
-      namespace: '{{.namespace | default "default"}}'
+
+  sync-secrets:
+    desc: Sync all ExternalSecrets [CLUSTER=main]
     cmds:
-      - |
-        {{if eq .secret ""}}
-          kubectl get externalsecret.external-secrets.io --all-namespaces --no-headers -A | awk '{print $1, $2}' \
-            | xargs --max-procs=4 -l bash -c 'kubectl -n $0 annotate externalsecret.external-secrets.io $1 force-sync=$(date +%s) --overwrite'
-        {{else}}
-          kubectl -n {{.namespace}} annotate externalsecret.external-secrets.io {{.secret}} force-sync=$(date +%s) --overwrite
-        {{end}}
+      - for: { var: SECRETS, split: "\n" }
+        cmd: kubectl --namespace {{splitList "," .ITEM | first}} annotate externalsecret {{splitList "," .ITEM | last}} force-sync="{{now | unixEpoch}}" --overwrite
+    vars:
+      SECRETS:
+        sh: kubectl get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
+    requires:
+      vars: [CLUSTER]
     preconditions:
-      - kubectl -n {{.namespace}} get es {{.secret}}
+      - which kubectl
 
   sync-all:
     desc: Sync all ExternalSecrets for a cluster
