--- a/kubernetes/main/apps/networking/external-dns/app/cloudflare/helmrelease.yaml
+++ b/kubernetes/main/apps/networking/external-dns/app/cloudflare/helmrelease.yaml
@@ -28,7 +28,8 @@ spec:
   values:
     fullnameOverride: *app
     # logLevel: debug
-    provider: cloudflare
+    provider:
+      name: cloudflare
     env:
       - name: CF_API_EMAIL
         valueFrom:
@@ -44,10 +45,13 @@ spec:
       - secretRef:
           name: external-dns-cloudflare-secret
     extraArgs:
-      - --ingress-class=external
+      - --cloudflare-dns-records-per-page=1000
       - --cloudflare-proxied
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
+      - --events
+      - --ignore-ingress-tls-spec
+      - --ingress-class=external
     policy: sync
     sources: ["crd", "ingress"]
     txtPrefix: k8s.
