--- a/.taskfiles/Sops/Taskfile.yaml
+++ b/.taskfiles/Sops/Taskfile.yaml
@@ -3,17 +3,14 @@
 version: "3"
 
 tasks:
-
-  fix-mac:
-    desc: Fix Sops MAC mismatch
-    cmd: |
-      find ./kubernetes -name '*.sops.yaml' | while read -r file;
-      do
-          sops -d "${file}" >/dev/null 2>&1 && rc=$? || rc=$?
-          # In case of MAC mismatch, then MAC is regenerated
-          # See https://github.com/mozilla/sops/blob/v3.6.1/cmd/sops/codes/codes.go#L19
-          if [ $rc -eq 51  ] ; then
-              echo "Regenerating sops MAC for: ${file}"
-              EDITOR="vim -es +'norm Go' +':wq'" sops --ignore-mac "${file}"
-          fi
-      done
+  re-encrypt:
+    desc: Decrypt and re-encrypt all sops secrets
+    vars:
+      SECRET_FILES:
+        sh: find . -type f -name '*.sops.yaml' ! -name ".sops.yaml"
+    cmds:
+      - for:
+          var: SECRET_FILES
+        cmd: |
+          sops --decrypt --in-place "{{ .ITEM }}"
+          sops --encrypt --in-place "{{ .ITEM }}"
