--- a/kubernetes/main/flux/config/flux.yaml
+++ b/kubernetes/main/flux/config/flux.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/ocirepository-source-v1beta2.json
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
@@ -10,6 +11,7 @@ spec:
   ref:
     tag: v2.4.0
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -24,28 +26,34 @@ spec:
     kind: OCIRepository
     name: flux-manifests
   patches:
+    # Remove image automation and image reflector controllers
+    - patch: |
+        $patch: delete
+        apiVersion: apps/v1
+        kind: Deployment
+        metadata:
+          name: all
+      target:
+        kind: Deployment
+        name: (image-automation-controller|image-reflector-controller)
+
+    # Remove the built-in network policies
     - patch: |
         $patch: delete
         apiVersion: networking.k8s.io/v1
         kind: NetworkPolicy
         metadata:
-          name: not-used
+          name: all
       target:
         group: networking.k8s.io
-        version: v1
         kind: NetworkPolicy
-    # Increase the number of reconciliations that can be performed in parallel and bump the resources limits
-    # https://fluxcd.io/flux/cheatsheets/bootstrap/#increase-the-number-of-workers
+
+    # Increase the number of workers and limits
+    # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#increase-the-number-of-workers-and-limits
     - patch: |
         - op: add
           path: /spec/template/spec/containers/0/args/-
-          value: --concurrent=8
-        - op: add
-          path: /spec/template/spec/containers/0/args/-
-          value: --kube-api-qps=500
-        - op: add
-          path: /spec/template/spec/containers/0/args/-
-          value: --kube-api-burst=1000
+          value: --concurrent=10
         - op: add
           path: /spec/template/spec/containers/0/args/-
           value: --requeue-dependency=5s
@@ -56,7 +64,7 @@ spec:
         apiVersion: apps/v1
         kind: Deployment
         metadata:
-          name: not-used
+          name: all
         spec:
           template:
             spec:
@@ -64,32 +72,55 @@ spec:
                 - name: manager
                   resources:
                     limits:
-                      cpu: 2000m
                       memory: 2Gi
       target:
         kind: Deployment
         name: (kustomize-controller|helm-controller|source-controller)
+
+    # Enable in-memory kustomize builds
+    # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-in-memory-kustomize-builds
     - patch: |
         - op: add
-          path: /spec/versions/1/schema/openAPIV3Schema/properties/spec/properties/eventSources/items/properties/kind/enum/-
-          value: Terraform
-      target:
-        kind: CustomResourceDefinition
-        name: alerts.notification.toolkit.fluxcd.io
-    - patch: |
-        - op: add
-          path: /spec/versions/0/schema/openAPIV3Schema/properties/spec/properties/resources/items/properties/kind/enum/-
-          value: Terraform
-      target:
-        kind: CustomResourceDefinition
-        name: receivers.notification.toolkit.fluxcd.io
-    - patch: |
-        - op: add
-          path: /rules/-
+          path: /spec/template/spec/containers/0/args/-
+          value: --concurrent=20
+        - op: replace
+          path: /spec/template/spec/volumes/0
           value:
-            apiGroups: ["infra.contrib.fluxcd.io"]
-            resources: ["*"]
-            verbs: ["*"]
+            name: temp
+            emptyDir:
+              medium: Memory
       target:
-        kind: ClusterRole
-        name: crd-controller-flux-system
+        kind: Deployment
+        name: kustomize-controller
+
+    # Enable Helm repositories caching
+    # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-helm-repositories-caching
+    - patch: |
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --helm-cache-max-size=10
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --helm-cache-ttl=60m
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --helm-cache-purge-interval=5m
+      target:
+        kind: Deployment
+        name: source-controller
+
+    # Flux near OOM detection for Helm
+    # Ref: https://fluxcd.io/flux/installation/configuration/helm-oom-detection/
+    - patch: |
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --feature-gates=OOMWatch=true
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --oom-watch-memory-threshold=95
+        - op: add
+          path: /spec/template/spec/containers/0/args/-
+          value: --oom-watch-interval=500ms
+      target:
+        kind: Deployment
+        name: helm-controller
