--- a/kubernetes/main/apps/databases/dragonfly/operator/kustomization.yaml
+++ b/kubernetes/main/apps/databases/dragonfly/operator/kustomization.yaml
@@ -3,6 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - https://raw.githubusercontent.com/dragonflydb/dragonfly-operator/v1.1.2/manifests/crd.yaml
+  # renovate: depName=dragonflydb/dragonfly-operator datasource=github-releases
+  - https://raw.githubusercontent.com/dragonflydb/dragonfly-operator/v1.1.8/manifests/crd.yaml
   - ./rbac.yaml
   - ./helmrelease.yaml
