--- a/kubernetes/main/apps/longhorn-system/longhorn/config/kustomization.yaml
+++ b/kubernetes/main/apps/longhorn-system/longhorn/config/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./recurring-jobs.yaml
-  - ./storage-class-definition.yaml
+  - ./snapshot.yaml
