Forgot backube repo

--- a/kubernetes/main/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/main/flux/repositories/helm/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ./actions-runner-controller.yaml
   - ./angelnu.yaml
+  - ./backube.yaml
   - ./bjw-s.yaml
   - ./cilium.yaml
   - ./cloudnative-pg.yaml
